tests/baselines/reference/parserErrorRecovery_Block1.errors.txt
==== tests/cases/compiler/parserErrorRecovery_Block1.ts (1 errors) ====
    function f() {
        1 + 
        return;
        ~~~~~~
!!! parserErrorRecovery_Block1.ts(3,5): error TS1005: 'expression' expected.
    }